# omeinsum-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.claude/: CLAUDE.md
.claude/skills/fix-pr/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review-quality/: SKILL.md
benches/: binary.rs  network.rs  network_3reg_150.json  network_benchmark.json  network_large.json  network_medium.json  network_small.json  profile_network.rs
benches/support/: binary.rs  network.rs
benchmarks/: compare.py
benchmarks/julia/: Manifest.toml  Project.toml  generate_timings.jl
docs/: book.toml
docs/plans/: 2026-02-03-static-permutedims.md  2026-02-05-permute-correctness-tests-impl.md  2026-04-10-grad-tape-unification.md  tensor-permutation-optimization.md
docs/src/: SUMMARY.md  api-reference.md  cli.md  installation.md  performance.md
docs/superpowers/plans/: 2026-04-11-benchmark-standardization.md  2026-04-12-contraction-performance-improvement.md
docs/superpowers/specs/: 2026-04-11-benchmark-standardization-design.md  2026-04-12-contraction-performance-improvement-design.md
examples/: bench_binary.rs  cpu_contract_bench.rs  profile_network.rs  test_gemm.rs  test_parallel.rs  test_strided.rs
omeinsum-cli/: Cargo.toml
omeinsum-cli/src/: autodiff.rs  common.rs  contract.rs  format.rs  main.rs  optimize.rs  parse.rs
omeinsum-cli/tests/: cli.rs
scripts/: make_helpers.sh
src/: lib.rs  test_support.rs
src/algebra/: mod.rs  semiring.rs  standard.rs  tropical.rs
src/backend/: traits.rs
src/backend/cpu/: buffer_pool.rs  contract.rs  mod.rs
src/backend/cuda/: mod.rs
src/backend/cuda/cutensor/: contract.rs  handle.rs
src/einsum/: backward.rs  engine.rs  mod.rs
src/tensor/: dense.rs  mod.rs  ops.rs
tests/: backward.rs  coverage.rs  cuda.rs  einsum_core.rs  main.rs  showcase.rs  tropical.rs
tests/suites/: backend_contract.rs  backward.rs  binary_rules.rs  coverage.rs  integration.rs  omeinsum_compat.rs  optimizer.rs  showcase.rs  tropical.rs  unary_ops.rs
