[package]
name = "omeinsum"
version = "0.1.0"
edition = "2021"
authors = ["Jinguo Liu <cacate0129@gmail.com>"]
description = "High-performance Einstein summation with tropical and standard algebra support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensor4all/omeinsum-rs"
keywords = ["einsum", "tensor", "tropical", "autodiff", "contraction"]
categories = ["science", "mathematics"]

# Native library requirements (for CUDA feature)
# cuTENSOR is linked via build.rs when cuda feature is enabled
[package.metadata.native-deps]
cutensor = { version = ">=2.0.0", note = "Required for cuda feature. Version 1.x uses incompatible API." }

[dependencies]
# Core
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
num-complex = { version = "0.4", features = ["bytemuck"] }

# High-performance GEMM for Standard algebra
faer = "0.24"

# Contraction order optimization
omeco = "0.2.4"

# Optional: Tropical algebra support (v0.2+ for column-major)
tropical-gemm = { version = "0.2", optional = true }

# Optional: CUDA support
tropical-gemm-cuda = { version = "0.2", optional = true }
cudarc = { version = "0.12", features = ["cuda-version-from-build-system"], optional = true }

# Optional: Parallelism
rayon = { version = "1.8", optional = true }

[dev-dependencies]
rand = "0.9"
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# Default: minimal, just Standard algebra
default = []

# Tropical algebra types with optimized SIMD kernels
tropical = ["dep:tropical-gemm"]

# Optimized SIMD kernels for tropical operations (kept for backward compatibility)
tropical-kernels = ["tropical"]

# Parallel execution
parallel = ["rayon"]

# CUDA backend (requires cuTENSOR 2.0+, see package.metadata.native-deps)
cuda = ["dep:cudarc"]

# Convenience: all features
full = ["tropical", "cuda"]

[[example]]
name = "basic_einsum"
path = "examples/basic_einsum.rs"
required-features = ["tropical"]

[[example]]
name = "tropical_network"
path = "examples/tropical_network.rs"
required-features = ["tropical"]

[workspace]
members = [".", "omeinsum-cli"]

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "network"
harness = false
