[package]
name = "omeinsum-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Einstein summation optimization and contraction"
license = "MIT OR Apache-2.0"

[[bin]]
name = "omeinsum"
path = "src/main.rs"

[dependencies]
omeinsum = { path = ".." }
omeco = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-complex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
